preparing interface to add events

--- a/coolendar/coolendar/CoolendarStoryboard.storyboard
+++ b/coolendar/coolendar/CoolendarStoryboard.storyboard
@@ -80,7 +80,7 @@
                                 </textAttributes>
                                 <items>
                                     <navigationItem title="all" id="FgB-bt-vkH">
-                                        <barButtonItem key="rightBarButtonItem" title="Item" id="GFH-70-za5">
+                                        <barButtonItem key="rightBarButtonItem" title="sign out" id="GFH-70-za5">
                                             <connections>
                                                 <action selector="logout:" destination="ZI3-gT-5R4" id="EHb-Lc-LdI"/>
                                             </connections>
@@ -88,11 +88,39 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HrD-32-c3o">
+                                <rect key="frame" x="20" y="78" width="280" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K46-87-SK8">
+                                        <rect key="frame" x="52" y="9" width="216" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hCJ-Ql-9lg">
+                                        <rect key="frame" x="20" y="12" width="24" height="24"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" image="help-button">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="seo-7i-WdN">
+                                <rect key="frame" x="0.0" y="134" width="320" height="387"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="all" image="toolbar-all" id="Hmb-CN-ZWt"/>
                     <connections>
+                        <outlet property="eventTextField" destination="K46-87-SK8" id="EhC-Fp-gLJ"/>
+                        <outlet property="eventsTableView" destination="seo-7i-WdN" id="dCf-IP-pcf"/>
+                        <outlet property="helpButton" destination="hCJ-Ql-9lg" id="eH8-GB-okQ"/>
                         <outlet property="logoutButton" destination="GFH-70-za5" id="k0v-AD-Ac4"/>
                     </connections>
                 </viewController>
@@ -238,6 +266,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="help-button" width="24" height="24"/>
         <image name="login-button" width="284" height="57"/>
         <image name="logo" width="195" height="53"/>
         <image name="toolbar-all" width="30" height="30"/>
